--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,13 @@
-rootProject.name = 'matrix'
+pluginManagement {
+    repositories {
+        jcenter()
+        maven {
+            name = 'Fabric'
+            url = 'https://maven.fabricmc.net/'
+        }
+        gradlePluginPortal()
+        mavenCentral()
+    }
+}
 
+rootProject.name = 'Matrix'
