--- a/build.gradle
+++ b/build.gradle
@@ -1,63 +1,51 @@
 plugins {
-	id "fabric-loom" version "0.6-SNAPSHOT"
-	id "org.cadixdev.licenser" version "0.5.0"
+	id "architectury-plugin" version "3.4-SNAPSHOT"
+	id "dev.architectury.loom" version "0.10.0-SNAPSHOT" apply false
 }
 
-apply plugin: "java"
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-sourceSets {
-	testmod
+architectury {
+	minecraft = rootProject.minecraft_version
 }
 
-dependencies {
-	minecraft "com.mojang:minecraft:21w08b"
-	mappings "net.fabricmc:yarn:21w08b+build.8:v2"
-	modImplementation "net.fabricmc:fabric-loader:0.11.1"
-	testmodImplementation sourceSets.main.output
-	testmodCompileOnly sourceSets.main.compileClasspath
-	testmodRuntimeOnly sourceSets.main.runtimeClasspath
-	modRuntime("net.fabricmc.fabric-api:fabric-api:0.31.2+1.17") {
-		exclude module: "fabric-loader"
+subprojects {
+	apply plugin: "dev.architectury.loom"
+
+	loom {
+		silentMojangMappingsLicense()
+	}
+
+	dependencies {
+		minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
+		// The following line declares the mojmap mappings, you may use other mappings as well
+		mappings loom.officialMojangMappings()
+		// The following line declares the yarn mappings you may select this one as well.
+		// mappings "net.fabricmc:yarn:1.18+build.1:v2"
 	}
 }
 
-version = "1.0.0"
-archivesBaseName = "Matrix"
-group = "org.dimdev"
+allprojects {
+	apply plugin: "java"
+	apply plugin: "architectury-plugin"
+	apply plugin: "maven-publish"
 
-license {
-	include '**/*.java'
-}
+	archivesBaseName = rootProject.archives_base_name
+	version = rootProject.version
+	group = rootProject.group
 
-processResources {
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+	repositories {
+		// Add repositories to retrieve artifacts from in here.
+		// You should only use this when depending on other mods because
+		// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
+		// See https://docs.gradle.org/current/userguide/declaring_repositories.html
+		// for more information about repositories.
 	}
 
-	inputs.property "version", project.version
-}
-
-tasks.withType(JavaCompile).configureEach {
-	it.options.encoding = "UTF-8"
-	def targetVersion = 8
-	if (JavaVersion.current().isJava9Compatible()) {
-		it.options.release.set(targetVersion)
+	tasks.withType(JavaCompile) {
+		options.encoding = "UTF-8"
+		options.release = 17
 	}
-}
 
-java {
-	withSourcesJar()
-}
-
-jar {
-	from("LICENSE") {
-		rename { "${it}_${project.archivesBaseName}"}
+	java {
+		withSourcesJar()
 	}
-}
-
-artifacts {
-	archives jar
 }
