--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,13 @@
 pluginManagement {
     repositories {
-        jcenter()
-        maven {
-            name = 'Fabric'
-            url = 'https://maven.fabricmc.net/'
-        }
+        maven { url "https://maven.fabricmc.net/" }
+        maven { url "https://maven.architectury.dev/" }
+        maven { url "https://maven.minecraftforge.net/" }
         gradlePluginPortal()
-        mavenCentral()
     }
 }
 
+include("common")
+include("fabric")
+include("forge")
 rootProject.name = 'Matrix'
