Fabric test mod works. Forge one still needs work

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -35,7 +35,7 @@ processResources {
 
 shadowJar {
     configurations = [project.configurations.shadowCommon]
-    classifier "dev-shadow"
+    classifier "fabric"
 }
 
 remapJar {
