--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,9 @@ pluginManagement {
 include("common")
 include("fabric")
 include("forge")
+
+include("testmod-common")
+include("testmod-fabric")
+include("testmod-forge")
+
 rootProject.name = 'Matrix'
