--- a/build.gradle
+++ b/build.gradle
@@ -1,54 +1,50 @@
 plugins {
-	id "fabric-loom" version "0.6-SNAPSHOT"
-	id "org.cadixdev.licenser" version "0.5.0"
+	id 'fabric-loom' version '0.11-SNAPSHOT'
+	id 'maven-publish'
 }
 
-apply plugin: "java"
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+archivesBaseName = project.archives_base_name
+version = project.mod_version
+group = project.maven_group
 
-sourceSets {
-	testmod
+repositories {
+	// Add repositories to retrieve artifacts from in here.
+	// You should only use this when depending on other mods because
+	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
+	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
+	// for more information about repositories.
 }
 
 dependencies {
-	minecraft "com.mojang:minecraft:21w08b"
-	mappings "net.fabricmc:yarn:21w08b+build.8:v2"
-	modImplementation "net.fabricmc:fabric-loader:0.11.1"
-	testmodImplementation sourceSets.main.output
-	testmodCompileOnly sourceSets.main.compileClasspath
-	testmodRuntimeOnly sourceSets.main.runtimeClasspath
-	modRuntime("net.fabricmc.fabric-api:fabric-api:0.31.2+1.17") {
-		exclude module: "fabric-loader"
-	}
-}
+	// To change the versions see the gradle.properties file
+	minecraft "com.mojang:minecraft:${project.minecraft_version}"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-version = "1.0.0"
-archivesBaseName = "Matrix"
-group = "org.dimdev"
-
-license {
-	include '**/*.java'
+	// Fabric API. This is technically optional, but you probably want it anyway.
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
 
 processResources {
+	inputs.property "version", project.version
+
 	filesMatching("fabric.mod.json") {
 		expand "version": project.version
 	}
-
-	inputs.property "version", project.version
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.encoding = "UTF-8"
-	def targetVersion = 8
-	if (JavaVersion.current().isJava9Compatible()) {
-		it.options.release.set(targetVersion)
-	}
+	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
+	it.options.release = 17
 }
 
 java {
+	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
+	// if it is present.
+	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 }
 
@@ -58,6 +54,19 @@ jar {
 	}
 }
 
-artifacts {
-	archives jar
+// configure the maven publication
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			from components.java
+		}
+	}
+
+	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
+	repositories {
+		// Add repositories to publish to here.
+		// Notice: This block does NOT have the same function as the block in the top level.
+		// The repositories here will be used for publishing your artifact, not for
+		// retrieving dependencies.
+	}
 }
