--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
+loom.platform=forge
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.18.1
 yarn_mappings=1.18.1+build.1
-loader_version=0.12.12
+forge_version=1.18.1-39.1.2
 
 # Mod Properties
 mod_version = 1.0.0
 maven_group = org.dimdev
 archives_base_name = matrix
-
-# Dependencies
-fabric_version=0.46.2+1.18
